# platform-channel-performance-analysis

./: .gitignore
analysis/: clarkeComp.ipynb  clarkeCompManualMean.csv  heavyLoad.ipynb  scroll.ipynb
analysis/android/: android.ipynb
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/benchmark/: build.gradle
android/benchmarkable/: CMakeLists.txt  build.gradle
android/benchmarkable/src/main/: AndroidManifest.xml
android/benchmarkable/src/main/cpp/: measuringWrapper.cpp
android/benchmarkable/src/main/java/com/example/platformchannelperformance/: BenchmarkActivity.kt  FlutterDependencies.kt  HomeScreen.kt  MainActivity.kt  Measuring.kt
android/benchmarkable/src/main/java/com/example/platformchannelperformance/clarke/: MessagingTimingPlugin.java  Pigeon.java
android/benchmarkable/src/main/java/com/example/platformchannelperformance/infinitescroll/: GetItemsUseCase.kt  GetItemsUseCaseFlutterWrapper.kt  InfiniteScrollScreen.kt  ScrollScreen.kt
android/benchmarkable/src/main/java/com/example/platformchannelperformance/measuring/: FpsMonitor.kt
android/benchmarkable/src/main/java/com/example/platformchannelperformance/ui/theme/: Color.kt  Theme.kt  Type.kt
android/benchmarkable/src/main/res/layout/: activity_benchmark.xml
android/macrobenchmark/: build.gradle
flutter/: README.md  pubspec.yaml
flutter/lib/: basic_message_channel.dart  main.dart  measuring.dart
flutter/test/: widget_test.dart
ios/: Podfile
ios/PlatformChannelPerformance.xcodeproj/: project.pbxproj
measuring-lib/: measuring.cpp  measuring.hpp
(+54 files in other folders)
